# python-project-49

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  brain_even.cast  demo.cast  pyproject.toml
brain_games/: cli.py  greet.py  interactions.py  win.py
brain_games/games/: calc.py  engine.py  even.py  game_progress.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
